# myBash

./: CMakeLists.txt  MyLs.cpp  MyLs.h  TODO.h  asking.h  cp.cpp  cp.h  help.cpp  help.h  lsboost.cpp  lsboost.h  main.cpp  mkdir.cpp  mkdir.h  move.cpp  move.h  mygrep.cpp  parse.cpp  parse.h  remove.cpp  remove.h
archieve/: cp.h  mkdir.h  move.h
nw/: move2.txt
